test/expected/explain_pv-knr.out
explain void *p
        ^
9: error: "void": unsupported type until C89
